hugo.toml created

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,51 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+## Site Settings
+baseurl = "/"
+languageCode = "en-us"
+title = "Hugo Starter"
+theme = "tailwind-starter"
+
+## Site Params
+[params]
+description = ""
+footer = ""
+
+## Page & URL Settings
+canonifyURLs = true
+disableKinds = ["taxonomy", "term"]
+
+[permalinks]
+post = "/post/:year/:month/:day/:slug/"
+
+## Social
+googleAnalytics = ""
+disqusShortname = ""
+
+## Rendering & Markup Options
+[markup.highlight]
+codeFences = false
+
+[markup.goldmark.renderer]
+unsafe = true
+
+## File Settings
+ignoreFiles = [
+  "\\.Rmd$",
+  "\\.Rmarkdown$",
+  "_cache$",
+  "\\.knit\\.md$",
+  "\\.utf8\\.md$"
+]
+
+## Menu
+[menus]
+##    [[menu.main]]
+##    name = "Home"
+##    pageRef = "/"
+##    weight = 10
+
+
+## Module Settings (NPM)
+[module]
+##  [[module.mounts]]
+##    source = "node_modules/..."
+##    target = "assets/../..."
